--- a/roles/estacao/tasks/020-instala-programas.yml
+++ b/roles/estacao/tasks/020-instala-programas.yml
@@ -20,6 +20,8 @@
               - vim
               - simple-scan
               - pdfsam
+              - plymouth
+              - plymouth-themes
             state: present
           tags: instalar
 
@@ -30,5 +32,6 @@
 
         - name: "Instala o RustDesk"
           ansible.builtin.apt:
-            deb: https://github.com/rustdesk/releases/download/1.4.1/rustdesk-1.4.1-x86_64.deb
+            deb: https://github.com/rustdesk/rustdesk/releases/download/1.4.1/rustdesk-1.4.1-x86_64.deb
             state: present
+
