Modificada a configuração do Plymouth

--- a/roles/estacao/tasks/070-configurar-plymouth.yml
+++ b/roles/estacao/tasks/070-configurar-plymouth.yml
@@ -1,7 +1,4 @@
 ---
-- name: Configura o Plymouth com tema
-  tasks:
-
     - name: Altera o GRUB para adicionar splash
       ansible.builtin.lineinfile:
         path: /etc/default/grub
@@ -14,17 +11,15 @@
           line: 'GRUB_GFXMODE=1368X768'
         - regexp: 'GRUB_TIMEOUT=5'
           line: 'GRUB_TIMEOUT=0'
-      backup: yes
-
-    - name: Atualiza o GRUB
-      ansible.builtin.command: update-grub2
-      changed_when: true
-      listen: "update grub config"
+      tags: plymouth
 
     - name: Configura o tema do Plymouth
       ansible.builtin.command: plymouth-set-default-theme -R ceratopsian
+      tags: plymouth
     
     - name: Aplica as mudanças
       ansible.builtin.command: update-grub2
+      changed_when: true
+      tags: plymouth
 
 
