--- a/roles/estacao/tasks/010-atualizar-pacotes.yml
+++ b/roles/estacao/tasks/010-atualizar-pacotes.yml
@@ -7,5 +7,6 @@
 
     - name: Atualizar todos os pacotes para a última versão
       ansible.builtin.apt:
-        upgrade: dist #dist-upgrade
+        name: "*"
+        state: latest
       tags: upgrade
