--- a/roles/estacao/tasks/020-instala-programas.yml
+++ b/roles/estacao/tasks/020-instala-programas.yml
@@ -25,6 +25,18 @@
             state: present
           tags: instalar
 
+        - name: "Instala python oauth2client"
+          ansible.builtin.apt:
+            deb: http://ftp.br.debian.org/debian/pool/main/p/python-oauth2client/python3-oauth2client_4.1.3-5_all.deb
+            state: present
+          tags: instalar
+
+        - name: "Instala python3-pydrive2"
+          ansible.builtin.apt:
+            deb: http://ftp.br.debian.org/debian/pool/main/p/pydrive2/python3-pydrive2_1.20.0-1_all.deb
+            state: present
+          tags: instalar
+
         - name: "Instala o Chrome"
           ansible.builtin.apt:
             deb: https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
