Modificada a configuração do Plymouth

--- a/inventory.yml
+++ b/inventory.yml
@@ -2,5 +2,8 @@ all:
   children:
     recepcao:
       hosts:
-        Gabinete:
+        gabinete:
+    presidente:
+      hosts:
+        presidencia:
     
