--- a/roles/estacao/handlers/main.yml
+++ b/roles/estacao/handlers/main.yml
@@ -1,3 +1,7 @@
 #SPDX-License-Identifier: MIT-0
 ---
 # handlers file for estacao
+- name: Restart SSH
+  ansible.builtin.service:
+    name: sshd
+    state: restarted
