--- a/roles/estacao/vars/main.yml
+++ b/roles/estacao/vars/main.yml
@@ -1,3 +1,6 @@
 #SPDX-License-Identifier: MIT-0
 ---
 # vars file for estacao
+
+estacao_unattended_conf: /etc/apt/apt.conf.d/50unattended-upgrades
+estacao_sshd: /etc/ssh/sshd_config
