Adicionado driver da impressora Epson

--- a/roles/estacao/tasks/020-instala-programas.yml
+++ b/roles/estacao/tasks/020-instala-programas.yml
@@ -3,6 +3,7 @@
           ansible.builtin.apt:
             name:
               - krfb
+              - printer-driver-escpr
               - openssh-server
               - deja-dup
               - vlc
