Consertada a configuração do KDE que estava inválida

--- a/roles/estacao/tasks/080-configurar-kde.yml
+++ b/roles/estacao/tasks/080-configurar-kde.yml
@@ -3,7 +3,7 @@
   copy:
     dest: "/etc/xdg/kdeglobals"
     content: |
-      /[KDE Action Restrictions/]/[$i/]
+      [KDE Action Restrictions][$i]
       shell_access=false
       run_command=false
       movable_toolbars=false
