Adicionados mais programas para a estação padrão

--- a/roles/estacao/tasks/020-instala-programas.yml
+++ b/roles/estacao/tasks/020-instala-programas.yml
@@ -17,6 +17,8 @@
               - pdfsam
               - plymouth
               - plymouth-themes
+              - thunderbird
+              - thunderbird-l10n-pt-br
             state: present
           tags: instalar
 
