--- a/roles/estacao/tasks/080-configurar-kde.yml
+++ b/roles/estacao/tasks/080-configurar-kde.yml
@@ -3,6 +3,8 @@
   copy:
     dest: "/etc/xdg/kdeglobals"
     content: |
+      [KDE]
+      widgetStyle=breeze
       [KDE Action Restrictions][$i]
       shell_access=false
       run_command=false
