Fotos agora podem ser impressas através do menu de contexto do Dolphin. Closes #1

--- a/roles/estacao/tasks/020-instala-programas.yml
+++ b/roles/estacao/tasks/020-instala-programas.yml
@@ -19,6 +19,8 @@
               - plymouth-themes
               - thunderbird
               - thunderbird-l10n-pt-br
+              - hyphen-pt-br
+              - mythes-pt-br
             state: present
           tags: instalar
 
