--- a/roles/estacao/tasks/080-configurar-kde.yml
+++ b/roles/estacao/tasks/080-configurar-kde.yml
@@ -7,3 +7,12 @@
     group: root
     mode: '0755'
   tags: kde
+
+- name: Esconde usuário de suporte da tela de login
+  copy:
+    src: files/hideusers.conf
+    dest: /etc/sddm.conf.d
+    owner: root
+    group: root
+    mode: '0755'
+  tags: kde
