Adicionado driver para as impressoras Brother na lista de programas a serem instalados. Closes #3

--- a/roles/estacao/tasks/020-instala-programas.yml
+++ b/roles/estacao/tasks/020-instala-programas.yml
@@ -4,10 +4,11 @@
             name:
               - krfb
               - printer-driver-escpr
+              - printer-driver-brlaser
               - openssh-server
               - deja-dup
               - vlc
-              - shotwell
+              - digikam
               - gimp
               - inkscape
               - gufw
